# 3D-Physics-Engine

./: README.md  writeup.txt
src/: CMakeLists.txt
src/SDLmain/: CMakeLists.txt
src/application/: scene_loader.cpp
src/math/: vector.hpp
src/p5/: CMakeLists.txt  collisions.cpp  collisions.hpp  main.cpp  physics.cpp  physics.hpp  planebody.cpp  planebody.hpp  spherebody.cpp  spherebody.hpp  spring.cpp  spring.hpp  trianglebody.cpp  trianglebody.hpp
src/scene/: CMakeLists.txt  geometry.cpp  mesh.cpp  model.cpp  scene.cpp  scene.hpp
